# tray_manager_winui

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION.md  LICENSE  OPTIONS_IDEAS.md  README.md  pubspec.yaml
example/: .gitignore  README.md  pubspec.yaml
example/images/: README.md
example/lib/: app.dart  main.dart  main_tab_page.dart  tray_controller.dart
example/lib/pages/: home.dart  overview_page.dart  style_editor_page.dart  style_playground.dart
example/lib/widgets/: code_preview_dialog.dart  color_picker_row.dart  section_card.dart  slider_row.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: tray_manager_winui.dart
lib/src/: tray_manager_winui.dart  winui_context_menu_style.dart  winui_flyout_placement.dart  winui_icon.dart  winui_menu_item.dart
screenshots/: README.md
test/: winui_context_menu_style_test.dart  winui_menu_item_test.dart
windows/: CMakeLists.txt  tray_manager_winui_plugin.cpp  winui_context_menu.cpp  winui_context_menu.h
windows/include/tray_manager_winui/: tray_manager_winui_plugin.h
